workshop03/bggappv1-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1-deploy
  labels:
    name: bggappv1-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      name: bggappv1-po
      version: v1
  template:
    metadata:
      name: bggappv1-po
      labels: 
        name: bggappv1-po
        version: v1
    spec:
      containers:
      - name: bggappv1-container
        image: stackupiss/bgg-backend:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        args: ["--prefix", "/v1"]
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  labels: 
    name: bggappv1-svc
    version: v1
spec:
  type: ClusterIP
  selector:
    name: bggappv1-po
    version: v1
  ports:
  - port: 3000
    targetPort: 3000
