workshop03/bggappv2-deploy.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv2-deploy
  labels:
    name: bggappv2-deploy
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      name: bggappv2-po
  template:
    metadata:
      name: bggappv2-po
      labels: 
        name: bggappv2-po
        version: v2
    spec:
      containers:
      - name: bggappv2-container
        image: stackupiss/bgg-backend:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        args: ["--prefix", "/v2"]
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: bggappv2-svc
  labels: 
    name: bggappv2-svc
    version: v2
spec:
  type: ClusterIP
  selector:
    name: bggappv2-po
    version: v2
  ports:
  - port: 3000
    targetPort: 3000
