workshop03/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  namespace: bggns
  labels:
    name:  bgg-ing
  # annotations:
    # nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  rules:
  - host: bggapp.146.190.5.178.nip.io 
    http:
      paths:
      - pathType: Prefix
        path: "/v1"
        backend:
          service:
            name: bggappv1-svc
            port: 
              number: 3000
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: bggappv2-svc
            port: 
              number: 3000
